<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <!-- TEXTVIEW TITLE -->
                <TextView
                    android:id="@+id/titleView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textStyle="bold|italic"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- TEXTVIEW IMAGE -->
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/carnavalrio"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleView"
                    tools:srcCompat="@drawable/carnavalrio"
                    android:contentDescription="@string/image_description" />

                <!-- TEXTVIEW DESCRIPTION -->
                <TextView
                    android:id="@+id/descriptionView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:justificationMode="inter_word"
                    android:text="@string/poi_descrip"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <!-- TEXTVIEW TITLE CARNIVAL -->
                <TextView
                    android:id="@+id/titleCarnaval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/name_carnaval"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionView" />

                <!-- TEXTVIEW DESCRIPTION CARNIVAL -->
                <TextView
                    android:id="@+id/descriptionCarnaval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:justificationMode="inter_word"
                    android:text="@string/description"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/titleCarnaval" />

                <!-- TEXTVIEW LABEL TEMPERATURE -->
                <TextView
                    android:id="@+id/labelTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/label_temp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionCarnaval" />

                <!-- TEXTVIEW VALUE TEMPERATURE -->
                <TextView
                    android:id="@+id/valTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/val_temp"
                    app:layout_constraintStart_toEndOf="@+id/labelTemperature"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionCarnaval" />

                <!-- TEXTVIEW LABEL DATE -->
                <TextView
                    android:id="@+id/labelDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_Date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelTemperature" />

                <!-- TEXTVIEW VALUE DATE -->
                <TextView
                    android:id="@+id/valDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/val_Date"
                    app:layout_constraintStart_toEndOf="@+id/labelTemperature"
                    app:layout_constraintTop_toBottomOf="@+id/valTemperature" />

                <!-- TEXTVIEW TITLE SITES -->
                <TextView
                    android:id="@+id/sitesList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/title_Sites"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/labelDate" />

                <!-- TEXTVIEW SITE 1 -->
                <TextView
                    android:id="@+id/site1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/site1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sitesList" />

                <!-- TEXTVIEW SITE 2 -->
                <TextView
                    android:id="@+id/site2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/site2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/site1" />

                <!-- TEXTVIEW SITE 3 -->
                <TextView
                    android:id="@+id/site3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/site3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/site2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
